--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,8 +21,9 @@
 				'STATUS_ORTHOGONAL_ERROR',
 				'STATUS_DRIFT_X',
 				'STATUS_DRIFT_Y',
-				'STATUS_RA_POSITION',
-		    		'STATUS_DEC_POSITION']
+                                'STATUS_DISPLAY_CURRENT_RA_DEC'
+                                ]
+                                
 
 		    for (const key of simple_update_keys){
 		    	socket.on(key, function(msg){
@@ -235,8 +236,11 @@
 		Current Tracking Position: <span id="STATUS_CURRENT_TRACKING_POSITION"></span></br>
 		Orthogonal Error: <span id="STATUS_ORTHOGONAL_ERROR"></span></br>
 		Parallel Tracking Error: <span id="STATUS_PARALLEL_ERROR"></span></br>
-		Current RA Position: <span id="STATUS_RA_POSITION"></span></br>
+		Current Position <span id="STATUS_DISPLAY_CURRENT_RA_DEC"></span></br>
+                <!--
+                Current RA Position: <span id="STATUS_RA_POSITION"></span></br>
 		Current DEC Position: <span id="STATUS_DEC_POSITION"></span></br>
+                -->
 	</div>
 
 	<div>Logs<div id="NewLogs" style="height:300px;width:400px;overflow:auto;border:2px solid black"></div></div>
