adding smoothed adjustments...totally untested

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -247,6 +247,10 @@
 		Orthogonal Error: <span id="STATUS_ORTHOGONAL_ERROR"></span></br>
 		Parallel Tracking Error: <span id="STATUS_PARALLEL_ERROR"></span></br>
 		Current Position <span id="STATUS_DISPLAY_CURRENT_RA_DEC"></span></br>
+		Smoothed RA: <span id="STATUS_SMOOTHED_RA_ADJUSTMENT"></span></br>
+		Smoothed ABS RA: <span id="STATUS_SMOOTHED_ABS_RA_ADJUSTMENT"></span></br>
+		Smoothed DEC: <span id="STATUS_SMOOTHED_DEC_ADJUSTMENT"></span></br>
+		Smoothed ABS DEC: <span id="STATUS_SMOOTHED_ABS_DEC_ADJUSTMENT"></span></br>
 	</div>
 
 	<div id="goto">
