fixed up smoothed adjustment values display

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,7 +21,11 @@
 				'STATUS_ORTHOGONAL_ERROR',
 				'STATUS_DRIFT_X',
 				'STATUS_DRIFT_Y',
-                                'STATUS_DISPLAY_CURRENT_RA_DEC'
+                                'STATUS_DISPLAY_CURRENT_RA_DEC',
+				'STATUS_SMOOTHED_RA_ADJUSTMENT',
+				'STATUS_SMOOTHED_ABS_RA_ADJUSTMENT',
+				'STATUS_SMOOTHED_DEC_ADJUSTMENT',
+				'STATUS_SMOOTHED_ABS_DEC_ADJUSTMENT'
                                 ]
                                 
 
